<resources>
    <string name="app_name">My NEVS</string>
    <string name="pay_title">请输入安全码</string>
    <string name="pay_sure">确认支付</string>
    <string name="pay_cancel">取消</string>
    <string name="pay_content">消费金额：0元</string>
    <string name="comm_comfirm">确定</string>
    <string name="comm_cancel">取消</string>
    <string name="comm_notice">温馨提示</string>
    <string name="i_know">我知道了</string>
    <string name="zfloading">努力加载中…</string>
    <string name="loading">正在加载中...</string>
    <string name="progressActivityErrorButton">重试</string>
    <string name="progressActivityEmptyTitlePlaceholder">没有数据</string>
    <string name="progressActivityEmptyContentPlaceholder">没有找到数据请点击重试</string>
    <string name="progressActivityErrorTitlePlaceholder">网络连接失败</string>
    <string name="progressActivityErrorContentPlaceholder">无法连接到网络,请检查后重试</string>
    <string name="tips_not_wifi">您当前正在使用移动网络，继续播放将消耗流量</string>
    <string name="tips_not_wifi_confirm">继续播放</string>
    <string name="tips_not_wifi_cancel">停止播放</string>
    <string name="no_url">播放地址无效</string>
    <string name="recovery_menu_debug">Debug</string>
    <string name="recovery_menu_save">Save</string>
    <string name="recovery_restart_clear">重启并清空缓存</string>
    <string name="recovery_restart">重启应用</string>
    <string name="recovery_recover">恢复界面</string>
    <string name="recovery_dialog_tips">提示</string>
    <string name="recovery_dialog_sure">确定</string>
    <string name="recovery_dialog_cancel">取消</string>
    <string name="recovery_dialog_tips_msg">此操作将清空应用的所有数据并重新启动应用!</string>
    <string name="recovery_exception_type">ExceptionType: %s</string>
    <string name="recovery_class_name">ClassName: %s</string>
    <string name="recovery_method_name">MethodName: %s</string>
    <string name="recovery_line_number">LineNumber: %d</string>
    <string name="recovery_crash_tips_msg">程序发生异常\n建议直接重启应用\n恢复界面仅用于应急处理</string>
    <string name="xrefreshview_header_hint_normal">下拉刷新</string>
    <string name="xrefreshview_header_hint_ready">松开刷新数据</string>
    <string name="xrefreshview_header_hint_refreshing">正在刷新...</string>
    <string name="xrefreshview_header_hint_loading">正在加载...</string>
    <string name="xrefreshview_header_hint_loaded">加载完成</string>
    <string name="xrefreshview_header_hint_loaded_fail">加载失败</string>
    <string name="xrefreshview_header_last_time">上次更新时间：</string>
    <string name="xrefreshview_footer_hint_normal">加载完成</string>
    <string name="xrefreshview_footer_hint_fail">加载失败，请重试</string>
    <string name="xrefreshview_footer_hint_complete">已无更多数据</string>
    <string name="xrefreshview_footer_hint_click">点击加载更多</string>
    <string name="xrefreshview_footer_hint_release">松开加载更多</string>
    <string name="xrefreshview_footer_hint_ready">松开载入更多</string>
    <string name="xrefreshview_never_refresh">正在刷新</string>
    <string name="xrefreshview_refresh_justnow">刚刚刷新</string>
    <string name="xrefreshview_refresh_minutes_ago">%1s分钟之前刷新</string>
    <string name="xrefreshview_refresh_hours_ago">%1s小时之前刷新</string>
    <string name="xrefreshview_refresh_days_ago">%1s天之前刷新</string>
    <string name="reback">再按一次退出程序</string>
    <string name="clear_data">恢复数据</string>
    <string name="click_to_refresh">点击刷新</string>
    <string name="change">切换View</string>
    <string name="clear_or_fill_data">清空或恢复数据</string>
    <string name="clear_or_fill_datak">0123456789abcdef</string>
    <string name="clear_or_fill_datav">1234567887654321</string>
    <string name="tab_car">车辆</string>
    <string name="tab_car2">爱车</string>
    <string name="tab_guide">导航</string>
    <string name="tab_serve">服务</string>
    <string name="tab_my">我</string>
    <string name="btn_login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="cancle">取消</string>
    <string name="create">创建帐号</string>
    <string name="re_phonenumber">手机号</string>
    <string name="re_code">验证码</string>
    <string name="re_password">密码</string>
    <string name="re_repassword">确认密码</string>
    <string name="re_family">姓氏</string>
    <string name="re_name">名字</string>
    <string name="getcode">获取验证码</string>
    <string name="toast_phonenumber">请输入正确的手机号</string>
    <string name="toast_repassword">请先输入密码后再确认</string>
    <string name="toast_repasswordtwo">请输入最少六位密码</string>
    <string name="toast_repasswordthree">密码必须包含字母</string>
    <string name="toast_repasswordnumber">密码必须包含数字</string>
    <string name="toast_repasswordone">两次密码输入不一致，请重新输入。</string>
    <string name="toast_create">请填写完整信息</string>
    <string name="toast_regist_success">注册成功</string>
    <string name="toast_regist_fail">注册失败</string>
    <string name="toast_message_fail">获取失败</string>
    <string name="toast_network">服务器异常</string>
    <string name="toast_please_fail">申请失败</string>
    <string name="upall">需要上传3张图片</string>
    <string name="toast_forgetsuccess">重置成功</string>
    <string name="toast_submitsuccess">提交成功</string>
    <string name="toast_bindsuccess">绑定成功</string>
    <string name="toast_loginfail">登录失败</string>
    <string name="toast_fixsuccess">修改成功</string>
    <string name="toast_fixfail">修改失败</string>
    <string name="toast_cancelsuccess">取消成功</string>
    <string name="toast_submitfail">提交失败</string>
    <string name="toast_submitfailexisted">手机号已注册</string>
    <string name="realname">实名认证</string>
    <string name="carname">车主姓名</string>
    <string name="idtyte">证件类型</string>
    <string name="idnumbers">证件号码</string>
    <string name="idbody">身份证</string>
    <string name="for_forgetpassword">忘记密码</string>
    <string name="for_setting_password">设置密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_input">请输入</string>
    <string name="hint_open">开启</string>
    <string name="hint_closed">关闭</string>
    <string name="hint_opens">空调开启</string>
    <string name="hint_closeds">空调关闭</string>
    <string name="for_confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="notifyTitle">提示</string>
    <string name="nextstep">下一步</string>
    <string name="empty">后续开通相关功能</string>
    <string name="confirm_picture">提交审核</string>
    <string name="save">保存</string>
    <string name="photo">拍照</string>
    <string name="choose_pictures">从相册中选择</string>
    <string name="delete">删除</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="servce_order">预约服务</string>
    <string name="servce_one">个人代理</string>
    <string name="servce_examine">车型品鉴</string>
    <string name="servce_state">用户手册</string>
    <string name="servce_tellphone">电话咨询</string>
    <string name="servce_stop">服务站</string>
    <string name="servce_news">新闻资讯</string>
    <string name="servce_more">更多</string>
    <string name="air_order">空调控制</string>
    <string name="apply">资格申请</string>
    <string name="newthread">新建线索</string>
    <string name="newname">姓名</string>
    <string name="newphone">电话</string>
    <string name="newsex">性别</string>
    <string name="newthink">意向车型</string>
    <string name="newland">所在地</string>
    <string name="newadress">详细地址</string>
    <string name="newgoal">购车目的</string>
    <string name="newbudget">购车预算</string>
    <string name="pleasewrite">请输入</string>
    <string name="car">轿车</string>
    <string name="call">拨打电话</string>
    <string name="call_enter">拨打</string>
    <string name="order_type">预约类型</string>
    <string name="car_type">车辆</string>
    <string name="order_time">预约时间</string>
    <string name="phonenum">手机号</string>
    <string name="sexs">性别</string>
    <string name="others">经销商</string>
    <string name="please_personagant">申请个人代理</string>
    <string name="select_location">选择省份</string>
    <string name="add_order">添加预约</string>
    <string name="add_shareo">0ahukme789012345</string>
    <string name="add_sharet">0123456789ABCDEF</string>
    <string name="car_control">车辆控制</string>
    <string name="car_air">空调控制</string>
    <string name="car_charge">充电服务</string>
    <string name="car_health">车辆体检</string>
    <string name="car_healtho">0123456789abcdef</string>
    <string name="hintbindcar">您还没有绑定车辆，去绑定</string>
    <string name="car_choose">选择车辆</string>
    <string name="car_bind">绑定车辆</string>
    <string name="car_get">授权车</string>
    <string name="car_add">添加车辆</string>
    <string name="car_healthall">车况信息</string>
    <string name="car_good">一切良好</string>
    <string name="car_state">状态</string>
    <string name="car_wash">清洗液</string>
    <string name="car_stop">刹车系统</string>
    <string name="car_veer">转向系统</string>
    <string name="car_cell">电池系统</string>
    <string name="car_body">车身系统</string>
    <string name="car_tire">胎压监测</string>
    <string name="car_chargesys">充电系统</string>
    <string name="car_power">平均耗电</string>
    <string name="car_mileage">总里程</string>
    <string name="car_start">启动</string>
    <string name="car_look">寻车</string>
    <string name="car_open">开锁</string>
    <string name="car_close">锁定</string>
    <string name="blutooth_open">蓝牙</string>
    <string name="flash">闪灯</string>
    <string name="guide_book">电子围栏</string>
    <string name="guide_cercle">圆形围栏</string>
    <string name="guide_land">地理围栏</string>
    <string name="search_key">请输入搜索关键字</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="favorite">收藏夹</string>
    <string name="baidumap">百度地图</string>
    <string name="gaodemap">高德地图</string>
    <string name="user">个人资料</string>
    <string name="my_notify">我的通知</string>
    <string name="editor">编辑</string>
    <string name="my_order">我的预约</string>
    <string name="history_order">历史预约</string>
    <string name="my_service">我的维修</string>
    <string name="my_service2">我的维修</string>
    <string name="my_cartype">车型/车牌</string>
    <string name="service">维修</string>
    <string name="keep">保养</string>
    <string name="service_enter">维修详情</string>
    <string name="keep_enter">保养详情</string>
    <string name="my_car">我的车辆</string>
    <string name="add_car">添加车辆</string>
    <string name="my_drive">我的驾照</string>
    <string name="car_copy">行车记录</string>
    <string name="sefe">故障救援</string>
    <string name="datas">流量查询</string>
    <string name="settings">设置</string>
    <string name="user_speak">用户反馈</string>
    <string name="share">分享</string>
    <string name="shareto">分享给朋友</string>
    <string name="about">关于我们</string>
    <string name="submit">提交</string>
    <string name="mark">评分</string>
    <string name="car_enter">车辆信息</string>
    <string name="dissolve">解除</string>
    <string name="car_log">行车日志</string>
    <string name="log_setting">日志设置</string>
    <string name="message_setting">消息通知</string>
    <string name="copy_setting">行程记录</string>
    <string name="look_setting">寻车鸣笛</string>
    <string name="book_setting">电子围栏预警</string>
    <string name="language_setting">多语言</string>
    <string name="password_setting">密码修改</string>
    <string name="fix_password">修改密码</string>
    <string name="safe_setting">更改安全码</string>
    <string name="finger_setting">安全码指纹</string>
    <string name="kill_setting">清理缓存</string>
    <string name="my_center2">我的</string>
    <string name="nevs_resetting">重置</string>
    <string name="nevs_wanyuan">万元</string>
    <string name="nevs_agreework">对我们的工作还满意？</string>
    <string name="nevs_activitygone">该页面兜风去了</string>
    <string name="nevs_refreshtext">别紧张，试试刷新页面</string>
    <string name="nevs_refresh">刷新</string>
    <string name="newclient">新建客户</string>
    <string name="edit1">请输入姓名</string>
    <string name="edit2">请输入手机号</string>
    <string name="edit3">请输入详细地址</string>
    <string name="edit4">请输入购车目的</string>
    <string name="edit5">请输入购车预算</string>
</resources>