<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_default"
            android:textSize="14sp"
            android:text="@string/comm_cancel"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_default"
            android:textSize="14sp"
            android:text="@string/nevs_resetting"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:id="@+id/nevs_resetting"
            />
    </RelativeLayout>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
             android:layout_gravity="center_horizontal"
            android:isIndicator="false"
            android:clickable="false"
        android:id="@+id/rabar"
        android:progressTint="#F4AD3C"
        android:progressBackgroundTint="#d8d7d6"
        android:secondaryProgressTint="#d8d7d6"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="start"
        android:id="@+id/edcontent"
        android:background="@drawable/edit_dialog"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="12sp"
        android:hint="@string/nevs_agreework"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_text"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:textSize="@dimen/btn"
        android:clickable="true"
        android:background="@drawable/btn_press"
        android:id="@+id/submit"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />
</LinearLayout>