<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nevs.car.activity.service.NewThreadActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/n_view"
        android:background="@color/white"
        >
        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_high"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="@dimen/back_margin"
                android:layout_height="match_parent"
                android:id="@+id/back"
                android:background="@drawable/btn_bowen"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/head_back"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/title_image_back_left_margin"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/n_333333"
                android:text="@string/newclient"
                android:textSize="@dimen/title_txt_size"/>

            <LinearLayout
                android:background="#c4c4c4"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/white"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/image_register_left"
            android:text="@string/newname"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:background="@drawable/layout_editnull"
            android:cursorVisible="false"
            android:maxLength="20"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:textColor="@color/tab_text_color_normal"
            android:textColorHint="@color/line"
            android:hint="@string/edit1"
            android:id="@+id/edit_name"
            android:textSize="14sp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_marginLeft="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/white"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/image_register_left"
            android:text="@string/phonenum"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:background="@drawable/layout_editnull"
            android:cursorVisible="false"
            android:maxLength="20"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:textColor="@color/tab_text_color_normal"
            android:textColorHint="@color/line"
            android:hint="@string/edit2"
            android:id="@+id/edit_phone"
            android:textSize="14sp"
            android:digits="1234567890"
            android:singleLine="true"

            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_marginLeft="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/listview_click"
        android:id="@+id/sex"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/image_register_left"
            android:text="@string/newsex"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/layout_editnull"
            android:cursorVisible="false"
            android:maxLength="20"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/edit_left_margin"
            android:textColor="@color/tab_text_color_normal"
            android:layout_centerHorizontal="true"
            android:id="@+id/edit_sex"
            android:textSize="14sp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/my_grzx_lmore"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_marginLeft="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/listview_click"
        android:id="@+id/car_type"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/image_register_left"
            android:text="@string/newthink"
            />
        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/layout_editnull"
            android:gravity="center"
            android:textColor="@color/tab_text_color_normal"
            android:layout_centerHorizontal="true"
            android:id="@+id/edit_think"
            android:textSize="14sp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/my_grzx_lmore"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_marginLeft="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/listview_click"
        android:id="@+id/location"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/image_register_left"
            android:text="@string/newland"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="2"
            android:background="@drawable/layout_editnull"
            android:gravity="center"
            android:layout_marginLeft="@dimen/edit_left_margin"
            android:textColor="@color/tab_text_color_normal"
            android:id="@+id/edit_land"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/my_grzx_lmore"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_marginLeft="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/white"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/image_register_left"
            android:text="@string/newadress"
            />
        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:maxLines="3"
            android:background="@drawable/layout_editnull"
            android:cursorVisible="false"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/tab_text_color_normal"
            android:textColorHint="@color/line"
            android:hint="@string/edit3"
            android:id="@+id/edit_adress"
            android:textSize="14sp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_marginLeft="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/white"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/image_register_left"
            android:text="@string/newgoal"
            />
        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:maxLines="2"
            android:background="@drawable/layout_editnull"
            android:cursorVisible="false"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/tab_text_color_normal"
            android:textColorHint="@color/line"
            android:hint="@string/edit4"
            android:id="@+id/edit_goal"
            android:textSize="14sp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_marginLeft="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/white"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/image_register_left"
            android:text="@string/newbudget"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:background="@drawable/layout_editnull"
            android:cursorVisible="false"
            android:maxLength="20"
            android:gravity="center_vertical"
            android:textColor="@color/tab_text_color_normal"
            android:textColorHint="@color/line"
            android:hint="@string/edit5"
            android:layout_centerHorizontal="true"
            android:id="@+id/edit_budget"
            android:textSize="14sp"

            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/edit_budget"
            android:layout_marginLeft="5dp"
            android:text="@string/nevs_wanyuan"
             />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/save"
        android:textSize="@dimen/btn"
        android:clickable="true"
        android:background="@drawable/btn_press"
        android:id="@+id/next"
        />
</LinearLayout>

