<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="54dp"
    android:background="@drawable/main_layer_list"
    >
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkedButton="@+id/rbCar"
        >
        <RadioButton
            android:id="@+id/rbCar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="13dp"
            android:text="@string/tab_car2"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_car_selector"
            android:background="@drawable/btn_bowen"
            />
        <RadioButton
            android:id="@+id/rbGuide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="9dp"
            android:text="@string/tab_guide"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_guide_selector"
            android:background="@drawable/btn_bowen"
            />

        <RadioButton
            android:id="@+id/rbServe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
           android:paddingTop="14dp"
            android:text="@string/tab_serve"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_serve_selector"
            android:background="@drawable/btn_bowen"
            />
        <RadioButton
            android:id="@+id/rbMy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
           android:paddingTop="9dp"
            android:text="@string/my_center2"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_my_selector"
            android:background="@drawable/btn_bowen"
            />

    </RadioGroup>
</LinearLayout>